<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="io.github.bbang208.spirit.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_primary">

        <!-- Left / Right split guideline -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <!-- ===== Header: App icon + Title + Subtitle ===== -->
        <ImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="@dimen/pleos_spacing_xxl"
            android:layout_marginTop="@dimen/pleos_spacing_xxl"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_app_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pleos_spacing_md"
            android:includeFontPadding="false"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Pleos.Title.Large"
            android:textColor="@color/text_dark_primary"
            app:layout_constraintBottom_toBottomOf="@+id/iv_app_logo"
            app:layout_constraintStart_toEndOf="@id/iv_app_logo"
            app:layout_constraintTop_toTopOf="@id/iv_app_logo"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_app_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pleos_spacing_md"
            android:text="@string/app_subtitle"
            android:textAppearance="@style/TextAppearance.Pleos.Label.Medium"
            android:textColor="@color/text_dark_tertiary"
            app:layout_constraintStart_toEndOf="@id/iv_app_logo"
            app:layout_constraintTop_toBottomOf="@id/tv_app_title" />

        <!-- Settings button (top-right) -->
        <ImageButton
            android:id="@+id/btn_settings"
            android:layout_width="@dimen/pleos_icon_btn_lg"
            android:layout_height="@dimen/pleos_icon_btn_lg"
            android:layout_marginTop="@dimen/pleos_spacing_lg"
            android:layout_marginEnd="@dimen/pleos_spacing_lg"
            android:background="?attr/selectableItemBackground"
            android:backgroundTint="@color/icon_dark_secondary"
            android:contentDescription="@string/title_settings"
            android:src="@drawable/ic_settings_gear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ===== Left panel: Recent Sessions ===== -->
        <TextView
            android:id="@+id/tv_recent_sessions_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/pleos_spacing_xxl"
            android:layout_marginTop="16dp"
            android:text="@string/recent_sessions_label"
            android:textAppearance="@style/TextAppearance.Pleos.Label.Small"
            android:textColor="@color/text_dark_tertiary"
            app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_subtitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recent_sessions"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/pleos_spacing_md"
            android:layout_marginBottom="@dimen/pleos_spacing_lg"
            android:clipToPadding="false"
            android:paddingHorizontal="24dp"
            android:visibility="@{viewModel.hasNoSessions ? View.GONE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recent_sessions_title"
            tools:listitem="@layout/item_session_card" />

        <TextView
            android:id="@+id/tv_empty_state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/no_sessions_yet"
            android:textAppearance="@style/TextAppearance.Pleos.Body.Medium"
            android:textColor="@color/text_dark_tertiary"
            android:visibility="@{viewModel.hasNoSessions ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recent_sessions_title" />

        <!-- ===== Right panel: Start Session ===== -->
        <ImageButton
            android:id="@+id/btn_start_session"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/start_session"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_play_circle"
            app:layout_constraintBottom_toTopOf="@id/tv_start_session_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_start_session_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pleos_spacing_lg"
            android:text="@string/start_session"
            android:textAppearance="@style/TextAppearance.Pleos.Title.Medium"
            android:textColor="@color/text_dark_primary"
            app:layout_constraintBottom_toTopOf="@id/tv_start_session_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/btn_start_session" />

        <TextView
            android:id="@+id/tv_start_session_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pleos_spacing_xs"
            android:text="@string/start_session_subtitle"
            android:textAppearance="@style/TextAppearance.Pleos.Label.Medium"
            android:textColor="@color/text_dark_tertiary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_start_session_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
